# mcp

./: .banditrc  .cursorrules  .envrc  .gitallowed  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Config  DESIGN_GUIDELINES.md  DEVELOPER_GUIDE.md  Deployment Steps.md  GIT_CONFIG_TEST.md  HEALTHIMAGING_TESTING_GUIDE.md  README.md  SECURITY.md  TEST_RESOLUTION_REPORT.md  VIBE_CODING_TIPS_TRICKS.md  WARP.md  WORKSPACE_SELECTION_CHANGES.md  aws-msk-mcp-server-coverage.xml  clean_mdx_issues.py  code.md  copy_includes.py  docker-compose.yaml  docker-compose.yml  feature-update.js  fix_frontmatter.py  fix_remaining_includes.py  flake.nix  index.html  mkdocs.yml  package-lock.json  poe  pr-body.md  process_all_includes.py  process_includes.py  rfc-extend-glue-data-catalog-coverage.md  run_prometheus_server.sh  (+6 more)
fuzzing/: Dockerfile  README.md  __init__.py  build.sh  classifier.py  coverage_reporter.py  dictionary_validator.py  harness_base.py  project.yaml  pyproject.toml
fuzzing/corpus/: .gitkeep  postgr
fuzzing/corpus/aws_api/: bedrock_list_models  command_with_output_format  command_with_profile  command_with_query  dynamodb_get_item  ec2_describe_instances  ec2_describe_with_filters  kms_list_keys  lambda_invoke  lambda_list_functions  rds_describe_db_instances  s3_cp  s3_list_objects  secretsmanager_list_secrets  sns_list_topics  sns_publish  sqs_list_queues  sqs_send_message  ssm_get_parameter  stepfunctions_list_state_machines
fuzzing/corpus/aws_documentation/: crlf_injection_1  invalid_domain_1  invalid_domain_2  invalid_scheme_1  null_byte_1  protocol_relative_1  smuggling_at_sign_1  smuggling_encoded_at_1  traversal_basic_1  traversal_double_encoded_1  traversal_encoded_1  traversal_windows_1  unicode_traversal_1  valid_cloudformation_url_1  valid_ec2_url_1  valid_iam_url_1  valid_lambda_url_1  valid_neuron_url_1  valid_rds_url_1  valid_s3_url_1
fuzzing/corpus/core/: env_var_values_4  env_var_values_5  toml_datetime  toml_inline_tables  toml_mcp_config_1  (+11 more)
fuzzing/dictionaries/: .gitkeep  aws_cli.dict  gremlin.dict  json.dict  openapi.dict  sparql.dict  sql.dict  toml.dict  yaml.dict
fuzzing/scripts/: .gitkeep  build_local.sh  run_local.sh
fuzzing/targets/: __init__.py
fuzzing/tests/: __init__.py  test_finding_classifier.py  test_harness_base.py
src/amazon-datazone-mcp-server/: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  DEVELOPMENT.md  NOTICE  README.md  pyproject.toml
src/aws-calculator-mcp-server/: CHANGELOG.md  README.md  pyproject.toml  run_estimate.py
src/aws-cicd-mcp-server/: AWS_DEFAULTS_IMPLEMENTATION.md  AWS_LATEST_PROPERTIES_VALIDATION.md  CHANGELOG.md  Dockerfile  NOTICE  README.md  STANDARDS_COMPLIANCE_REPORT.md  appspec.yml  buildspec.yml  docker-healthcheck.sh  pipeline-config.json  pyproject.toml  setup-pipeline.sh
src/aws-dms-mcp-server/: CHANGELOG.md  Dockerfile  README.md  build-and-install-local.sh  docker-healthcheck.sh  launch-inspector.sh  mcp-client-config.json  mcp-inspector-config.json  publish-test-pypi.sh  pull-request.md  pyproject.toml  uv-requirements.txt
src/aws-fis-mcp-server/: .gitignore  LICENSE  README.md  main.py  mcp_config.json  pyproject.toml
src/aws-guardduty-mcp-server/: CHANGELOG.md  NOTICE  README.md  pyproject.toml
src/aws-iot-sitewise-mcp-server/: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  INSTALL.md  README.md  aws-iot-sitewise-mcp-server-coverage.xml  pyproject.toml  requirements.txt  run_server.py  setup.py  uv-requirements.txt
src/aws-security-mcp-server/: CHANGELOG.md  README.md  pyproject.toml
src/awslabs-mcp-common/: README.md  pyproject.toml
src/bedrock-advisor-mcp-server/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FUTURE_IMPROVEMENTS.md  LICENSE  NOTICE  PR_DESCRIPTION.md  README.md  config.template.json  contribution_plan.md  docker-healthcheck.sh  mcp-config-example.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_server.py  run_tests.sh  run_tests_with_coverage.sh  test_tools.py  uv-requirements.txt
src/cell-based-architecture-mcp-server/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CICD_OBSERVABILITY_ENHANCEMENTS.md  INTEGRATION_SUMMARY.md  LICENSE  NOTICE  README.md  README_ENHANCEMENTS.md  pyproject.toml
src/chaosmesh-mcp-server/: .gitignore  EKS-SETUP.md  MIGRATION-TO-UVX.md  README.md  SETUP.md  UVX-USAGE.md  fault_inject.py  kube.py  pyproject.toml  rbac-config.yaml  server.py  services.json  setup-eks-permissions.sh  setup-uvx.sh  test.py
src/cloudwan-mcp-server/: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  MODULARIZATION_IMPLEMENTATION.md  MODULARIZATION_STRATEGY.md  NOTICE  PIPELINE_GENERALIZATION_ANALYSIS.md  PR_UPDATE.md  README.md  TEST_RESULTS.md  integration_test_endpoints.py  pyproject.toml  setup.py  test_dynamic_endpoints.py  test_q_developer.py  uv-requirements.txt
src/cost-explorer-mcp-server/: .pre-commit-config.yaml  Dockerfile  README.md  docker-healthcheck.sh  pyproject.toml
src/diagram-expert/: CHANGELOG.md  README.md  diagrams_mcp_server  example_diagram.py  pyproject.toml  pytest.ini  run_tests.sh  test_generate_diagram.py  test_import.py  test_imports.py
src/etl-replatforming-mcp-server/: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FLEX_SPECIFICATION.md  LICENSE  Makefile  NOTICE  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  setup.py
src/mwaa-mcp-server/: CHANGELOG.md  DEVELOPMENT.md  Dockerfile  NOTICE  README.md  docker-healthcheck.sh  pyproject.toml  pyrightconfig.json  server.json  uv-requirements.txt
src/pcap-analyzer-mcp-server/: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  NOTICE  README.md  coverage.json  docker-healthcheck.sh  pcap-analyzer-mcp-server-coverage.xml  pyproject.toml
src/prometheus-mcp-server-backup/: NOTICE  pyproject.toml
src/roda-mcp-server/: README.md  pyproject.toml
src/systems-manager-mcp-server/: Dockerfile  NOTICE  README.md  pyproject.toml
(+6049 files in other folders)
