[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-fis-mcp"
version = "0.2.0"
description = "AWS Fault Injection Service (FIS) MCP Server - supports uvx execution"
readme = "README.md"
authors = [
    {name = "AWS FIS MCP Team"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.26.0",
    "mcp>=1.0.0",
]

[project.scripts]
aws-fis-mcp = "aws_fis_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]



[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
