[project]
name = "awslabs.cell-based-architecture-mcp-server"
version = "1.0.0"
description = "An AWS Labs Model Context Protocol (MCP) server for Cell-Based Architecture guidance"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.11.0",
    "pydantic>=2.10.6",
    "loguru>=0.7.0",
]
license = {text = "Apache-2.0"}
license-files = ["LICENSE", "NOTICE"]

authors = [
    {name = "Amazon Web Services"},
    {name = "AWSLabs MCP", email="203918161+awslabs-mcp@users.noreply.github.com"},
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
"awslabs.cell-based-architecture-mcp-server" = "awslabs.cell_based_architecture_mcp_server.server:main"

[project.urls]
Homepage = "https://awslabs.github.io/mcp/"
Documentation = "https://awslabs.github.io/mcp/servers/cell-based-architecture-mcp-server/"
Source = "https://github.com/awslabs/mcp.git"
"Bug Tracker" = "https://github.com/awslabs/mcp/issues"
Changelog = "https://github.com/awslabs/mcp/blob/main/src/cell-based-architecture-mcp-server/CHANGELOG.md"

[dependency-groups]
dev = [
    "commitizen>=4.2.2",
    "pre-commit>=4.1.0",
    "ruff>=0.9.7",
    "pyright>=1.1.398",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-asyncio>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 99
force-exclude = true

[tool.ruff.lint]
select = ["C", "D", "E", "F", "I", "W"]
ignore = ["C901", "E501", "E741", "F402", "F823", "D100", "D106"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
version_files = [
    "pyproject.toml:version",
    "awslabs/cell_based_architecture_mcp_server/__init__.py:__version__"
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.coverage.run]
source = ["awslabs"]

[tool.hatch.build.targets.wheel]
packages = ["awslabs"]